--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^2.2.1",
     "json-loader": "^0.5.4",
+    "ng2-toasty": "^2.5.0",
     "preboot": "^4.5.2",
     "raw-loader": "^0.5.1",
-    "rxjs": "^5.0.1",
+    "rxjs": "^5.2.0",
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.5",
     "typescript": "^2.2.1",
@@ -42,7 +43,7 @@
     "webpack": "^2.2.0",
     "webpack-hot-middleware": "^2.12.2",
     "webpack-merge": "^0.14.1",
-    "zone.js": "^0.7.6"
+    "zone.js": "^0.7.8"
   },
   "devDependencies": {
     "@angular/cli": "^1.0.0-rc.4"
