--- a/package.json
+++ b/package.json
@@ -34,8 +34,9 @@
     "json-loader": "^0.5.4",
     "ng2-toasty": "^2.5.0",
     "preboot": "^4.5.2",
+    "raven-js": "^3.14.0",
     "raw-loader": "^0.5.1",
-    "rxjs": "^5.2.0",
+    "rxjs": "^5.3.0",
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.5",
     "typescript": "^2.2.1",
