--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "Default": "server=localhost; database=vega; user id=sa; password=MyComplexPassword!234"
   },
+  "PhotoSettings": {
+    "MaxBytes": 10485760,
+    "AcceptedFileTypes": [".jpg", ".jpeg", ".png"]
+  },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
