--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@angular/platform-server": "^2.4.5",
     "@angular/router": "^3.4.5",
     "@types/node": "^6.0.42",
+    "angular2-jwt": "^0.2.2",
     "angular2-platform-node": "~2.0.11",
     "angular2-template-loader": "^0.6.2",
     "angular2-universal": "^2.1.0-rc.1",
@@ -19,6 +20,7 @@
     "angular2-universal-polyfills": "^2.1.0-rc.1",
     "aspnet-prerendering": "^2.0.0",
     "aspnet-webpack": "^1.0.17",
+    "auth0-lock": "^10.15.0",
     "awesome-typescript-loader": "^3.0.0",
     "bootstrap": "^3.3.7",
     "css": "^2.2.1",
