--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@angular/platform-server": "^2.4.5",
     "@angular/router": "^3.4.5",
     "@types/node": "^6.0.42",
+    "angular2-chartjs": "^0.2.0",
     "angular2-jwt": "^0.2.2",
     "angular2-platform-node": "~2.0.11",
     "angular2-template-loader": "^0.6.2",
@@ -23,6 +24,7 @@
     "auth0-lock": "^10.15.0",
     "awesome-typescript-loader": "^3.0.0",
     "bootstrap": "^3.3.7",
+    "chart.js": "^2.5.0",
     "css": "^2.2.1",
     "css-loader": "^0.25.0",
     "es6-shim": "^0.35.1",
