--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.5",
     "typescript": "^2.2.1",
+    "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.0",
     "webpack-hot-middleware": "^2.12.2",
